Fix layout bug

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -173,7 +173,6 @@ body::before {
 }
 
 .page {
-  position: relative;
   overflow: hidden;
 }
 
