--- a/assets/scss/_layouts.scss
+++ b/assets/scss/_layouts.scss
@@ -20,7 +20,6 @@ body {
   }
 }
 .page {
-  position: relative;
   overflow: hidden;
 }
 section {
